--- a/bvmfscrapper.csproj
+++ b/bvmfscrapper.csproj
@@ -1,12 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp1.1</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="HtmlAgilityPack.CssSelectors.NetCore" Version="1.0.0" />
+    <PackageReference Include="AngleSharp" Version="0.9.9" />
   </ItemGroup>
-
 </Project>
