--- a/bvmfscrapper.csproj
+++ b/bvmfscrapper.csproj
@@ -14,4 +14,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="data\repositories\" />
+  </ItemGroup>
 </Project>
