--- a/bvmfscrapper.csproj
+++ b/bvmfscrapper.csproj
@@ -9,10 +9,14 @@
     <None Remove="output\**" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="bvmfscrapper.log" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="AngleSharp" Version="0.9.9" />
     <PackageReference Include="log4net" Version="2.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="data\repositories\" />
