--- a/log4net.config
+++ b/log4net.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <log4net>
-  <appender name="RollingFile" type="log4net.Appender.FileAppender">
-    <file value="bvmfscrapper.log" />
+  <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
+    <file value="output/bvmfscrapper.log" />
     <appendToFile value="false" />
     <rollingStyle value="Once" />
     <maxSizeRollBackups value="-1" />
