--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,18 @@
    // For further information visit https://github.com/OmniSharp/omnisharp-vscode/blob/master/debugger-launchjson.md
    "version": "0.2.0",
    "configurations": [
+       {
+           "name": "Only Links",
+           "type": "coreclr",
+           "request": "launch",
+           "preLaunchTask": "build",
+           "program": "${workspaceRoot}/bin/Debug/netcoreapp1.1/bvmfscrapper.dll",
+           "args": ["--dont-extract-companies", "--dont-update-db"],
+           "cwd": "${workspaceRoot}",
+           "stopAtEntry": false,
+           "console": "internalConsole",
+           "internalConsoleOptions": "openOnSessionStart"
+       },
         {
             "name": ".NET Core Launch (console)",
             "type": "coreclr",
